# bunnymark

./: .gitmodules  CMakeLists.txt  README.md
shaders/bgfx/: varying.def.sc  vs_bunny.sc
shaders/bgfx_simple/: fs_bunny.sc  vs_bunny.sc
src/: bunnymark_bgfx.cpp  bunnymark_bgfx_simple.cpp  bunnymark_sdl2_gpu.cpp  bunnymark_sdl3_gpu.cpp  bunnymark_sdl_renderer.cpp
